<resources>
    <string name="app_name">BD3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="val">N:</string>
    <string name="nreg">C:</string>
    <string name="ins">Insertar</string>
    <string name="act">Actualizar</string>
    <string name="elim">Eliminar</string>
    <string name="cons">Consultar</string>
</resources>
