<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/LinearLayout1"
    tools:context=".MainActivity"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nreg"/>

        <EditText
            android:id="@+id/txtReg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="5"><requestFocus/></EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/val"/>

        <EditText
            android:id="@+id/txtVal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnInsertar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/ins"/>

        <Button
            android:id="@+id/btnActualizar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/act"/>

        <Button
            android:id="@+id/btnEliminar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/elim"/>

        <Button
            android:id="@+id/btnConsultar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cons"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtResultado"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""/>

</LinearLayout>